--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "The best way to watch video ",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec babel-node src/init.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/danchew90/mytube#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^5.13.7",
     "pug": "^3.0.2"
   },
   "devDependencies": {
